Introduce Builder pattern into RPC